# research-group-file-management

./: .env.example  .gitignore  AGENTS.md  API_INTEGRATION_REPORT.md  CHANGELOG.md  CLAUDE.md  DELIVERY_CHECKLIST.md  FINAL_DELIVERY_REPORT.md  QUICKSTART.md  README.md  TDD_SUMMARY.md  TEST_REPORT.md  api_server.py  api_server_example.py  deploy-singularity.sh  deploy-ubuntu-with-internet.sh  pyproject.toml  test_api_client.py
docs/: API_INTEGRATION.md  IMPLEMENTATION_SUMMARY_2026-06-23.md  security-audit-report.md  security-audit-summary.md  使用手册-管理者版.md
docs/plans/: 2026-06-23-full-web-features.md  PROJECT_ROADMAP.md  deploy-2026-06-24.md  deploy-local-server-2026-06-24.md  general.md  init-20260623.md  wechat-implementation-summary.md  wechat-integration-2026-06-24.md  wechat-miniprogram-multilab.md  使用手册.md  使用说明.md  源代码整理.md  计算机软件著作登记信息表.md  设计开发文档2-管理者视角.md  设计说明书.md
docs/product/: ENTITY_FIELDS.md  PERMISSION_MATRIX.md  REQUIREMENTS.md
examples/: research_outputs.sample.json
miniprogram/: CHECKLIST.md  DELIVERY.md  QUICKSTART.md  README.md  app.js  app.json  app.wxss  project.config.json
miniprogram/utils/: api.js  auth.js  (+1 more)
tests/: bug_fix_concurrent_write.py  bug_fix_fcntl.py  run_all_tests.sh  test_api_integration.py  test_api_integration_extended.py  test_e2e_wechat.py  test_e2e_wechat.py.bak  test_e2e_wechat.py.bak2  test_e2e_wechat.py.bak3  test_e2e_wechat.py.bak4  test_e2e_wechat.py.bak5  test_e2e_wechat.py.bak6  test_error_handling.py  test_multilab.py  test_research_manager.py  test_security.py  test_security_vulnerabilities.py  test_web_ui.py
(+36 files in other folders)
