[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-literature-manager"
version = "0.2.0"
description = "A lightweight research output management CLI for research groups."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Lab Literature Manager Contributors" }
]
keywords = ["research-output", "research-group", "cli", "literature", "project-management"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
litman = "lab_literature_manager.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
